--- a/index.html
+++ b/index.html
@@ -65,6 +65,19 @@
 
             </form>
 
+
+            <div class="reach-us text-center">
+                    <footer>
+                        <img src="images/twitter.png" alt="twitter">
+                        <img src="images/facebook.png" alt="facebook">
+                        <img src="images/skype.png" alt="skype">
+                        <img src="images/you_tube.png" alt="you_tube">
+            
+                        <br>YAMMY PIZZA INN<br>2019<br>
+                    </footer>
+                </div>
+
+
         </div>
 
 
