added some background images

--- a/ourmenu.html
+++ b/ourmenu.html
@@ -32,8 +32,8 @@
 
 
         <div class="container2">
-            <div class="menu container">
-                <h2>MENU</h2>
+
+            <h2>MENU</h2>
                 <form class="menu" action="index.html" method="post" id="menu1">
 
                     <div class="row">
@@ -80,13 +80,12 @@
 
                     <span class="btn btn-primary" id="add">Another pizza</span>
 
-                    <button type="submit" class="btn">Add</button><br><br>
+                    <button type="submit" class="btn btn-success">Add</button><br><br>
 
                 </form>
 
-                <div class="row">
-                    <input type="submit" id="btn" class="btn-primary float-right" name="button" value="submit">
-                </div>
+            <div class="row">
+                <input type="submit" id="btn" class="btn-primary float-right" name="button" value="submit">
             </div><br><br>
 
 
