--- a/contact.html
+++ b/contact.html
@@ -14,37 +14,40 @@
 
 <body>
 
-        <div class="container1">
-                <div class="our" id="ourmenu">
-                    <div class="navbar" id="nav1">
-                        <a href="index.html">Home</a>
-                        <a href="ourmenu.html">Our Menu</a>
-                        <a href="contact.html">Contact</a>
-                        <a href="about.html">About</a>
-                        <a href="javascript:void(0);" class="icon1" onclick="myFunction()"></a>
-                    </div>
-        
-                    <br><br><br><br><br><br>
-        
-
-                <h1>YAMMY PIZZA INN</h1>
-                <P>Best Services Best Pizza</P>
-            </div>
-            <div class="reach" id="cnt">
-                <footer class="reach-us text-center">
-                    <img src="images/twitter.png" alt="twitter">
-                    <img src="images/facebook.png" alt="facebook">
-                    <img src="images/skype.png" alt="skype">
-                    <img src="images/you_tube.png" alt="you_tube">
-
-                    <br>YAMMY PIZZA INN<br>2019<br>
-                </footer>
+    <div class="container1">
+        <div class="our" id="ourmenu">
+            <div class="navbar" id="nav1">
+                <a href="index.html">Home</a>
+                <a href="ourmenu.html">Our Menu</a>
+                <a href="contact.html">Contact</a>
+                <a href="about.html">About</a>
+                <a href="javascript:void(0);" class="icon1" onclick="myFunction()"></a>
             </div>
 
+            <br><br><br><br><br><br>
 
+
+            <h1>YAMMY PIZZA INN</h1>
+            <P>Best Services Best Pizza</P>
+        </div>
+        <div class="reach" id="cnt">
+
+            <footer class="reach-us text-center">
+                <P>Email: lillianngoiri@gmail.com</P><br>
+                <p>Phone number: 0702 004 661</p><br>
+                <img src="images/twitter.png" alt="twitter">
+                <img src="images/facebook.png" alt="facebook">
+                <img src="images/skype.png" alt="skype">
+                <img src="images/you_tube.png" alt="you_tube"><br><br>
+
+                <br>YAMMY PIZZA INN<br>2019<br>
+            </footer>
         </div>
 
 
-    </body>
+    </div>
+
+
+</body>
 
 </html>
