Have added a cart for my forms

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,6 @@
                 <a href="index.html">Home</a>
                 <a href="ourmenu.html">Our Menu</a>
                 <a href="contact.html">Contact</a>
-                <a href="about.html">About</a>
                 <a href="javascript:void(0);" class="icon1" onclick="myFunction()"></a>
             </div>
 
@@ -38,7 +37,7 @@
                 <img src="images/twitter.png" alt="twitter">
                 <img src="images/facebook.png" alt="facebook">
                 <img src="images/skype.png" alt="skype">
-                <img src="images/you_tube.png" alt="you_tube"><br><br>
+                <img src="images/you_tube.png" alt="you_tube"><br>
 
                 <br>YAMMY PIZZA INN<br>2019<br>
             </footer>
