--- a/ourmenu.html
+++ b/ourmenu.html
@@ -21,24 +21,26 @@
                 <a href="index.html">Home</a>
                 <a href="ourmenu.html">Our Menu</a>
                 <a href="contact.html">Contact</a>
-                <a href="about.html">About</a>
                 <a href="javascript:void(0);" class="icon1" onclick="myFunction()"></a>
             </div>
 
             <br><br><br><br><br><br>
 
             <h1>YAMMY PIZZA INN</h1>
-        </div>
+        </div><br><br><br><br>
 
 
         <div class="container2">
             <h2>MENU</h2>
-            <form class="menu" action="index.html" method="post" id="menu1">
+
+            <form class="menu" action="index.html" method="post" id="menu1"><br><br>
+
 
                 <div class="row">
-                    <div class="color"><label>SIZE</label></div>
-                    <div class="col-md">
-
+                    <div class="col-sm-3 color">
+                        <label>SIZE</label>
+                    </div>
+                    <div class="col-sm-3">
                         <select class="form-control" name="size" required>
                             <option value="small" id="small">Small</option>
                             <option value="medium" id="medium">Medium</option>
@@ -49,9 +51,10 @@
                 </div><br><br>
 
                 <div class="row">
-                    <div class="color"><label>CRUST</label></div>
-                    <div class="col-md">
-
+                    <div class="col-sm-3 color">
+                        <label>CRUST</label>
+                    </div>
+                    <div class="col-sm-3">
                         <select class="form-control" name="crust" required>
                             <option value="cripsy" id="cripsy"> Cripsy </option>
                             <option value="stuffed" id="stuffe">Stuffed </option>
@@ -63,38 +66,56 @@
 
 
                 <div class="row">
-                    <div class="color"><label>TOPPINGS</label></div>
-
-                    <div class="col-md">
-
+                    <div class="col-sm-3 color">
+                        <label>TOPPINGS</label>
+                    </div>
+                    <div class="col-sm-3">
                         <select class="form-control" name="toppings" required>
                             <option value="chicken" id="chicken">Chicken</option>
                             <option value="beef" id="beef">Beef</option>
                             <option value="vegetables" id="vegetables">vegetables</option>
                         </select>
                         <span class="error" id="toppings-error"></span>
-
+                    </div>
+                </div><br><br>
+                <div class="row">
+                    <div class="col-sm-3 color">
+                        <label>QUANTITY</label>
+                    </div>
+                    <div class="col-sm-3">
+                        <input type="number" value="1" class="form-control " min="1" max="10" />
+                        <span class="error" id="toppings-error"></span>
                     </div>
                 </div><br><br>
 
-                <span class="btn btn-primary" id="add">Another pizza</span>
+                <div class="row">
+                    <div class="col-sm-3 color">
 
-                <button type="submit" class="btn btn-success">Add</button><br><br>
+                    </div>
+                    <div class="col-sm-3">
+                        <button type="button" class="btn btn-success float-right">Add</button>
+                    </div>
+
+                    <br><br>
 
             </form>
         </div>
 
         <div class="order" id="orders">
             <h1 class="text-center" id="pizzadd">Order Summary</h1>
-            <h2 class="text-center pizzadd">Your order is as follows:</h2>
+
             <ol id="list" class="text-center sum">
+                You have 0 items in your cart
             </ol>
 
 
             <div class="cdata-overlay" id="pic">
                 <div class="customerdata row">
+                       
                     <div class="col-sm-3"></div>
+                    
                     <form action="" class="form-group col-sm-6 data" id="data">
+                        <h1 class="text-center text-danger">Delivery address</h1>
                         <input type="text" class="form-control cdata" id="name" placeholder="Enter your Name:"><br><br>
                         <input type="text" class="form-control cdata" id="phone"
                             placeholder="Enter your phone number: "><br><br>
@@ -103,7 +124,7 @@
                         <button class="btn bg-info text-center d-block mx-auto go" id="go" type="submit">Make
                             Delivery</button>
                         <button class="bnt bg-info text-center d-block mx-auto go" id="do" type="submit">Pick
-                            Up</button>"
+                            Up</button>
                     </form>
 
                     <div class="col-sm-3"></div>
