changes the color for the title and the slogan

--- a/ourmenu.html
+++ b/ourmenu.html
@@ -27,6 +27,7 @@
             <br><br><br><br><br><br>
 
             <h1>YAMMY PIZZA INN</h1>
+            <P>Best Services Best Pizza !!!</P>
         </div><br><br><br><br>
 
 
