have added the cost of every toppings and crust

--- a/ourmenu.html
+++ b/ourmenu.html
@@ -43,9 +43,9 @@
                     </div>
                     <div class="col-sm-3">
                         <select class="form-control" name="size" required>
-                            <option value="small">Small</option>
-                            <option value="medium">Medium</option>
-                            <option value="large">Large</option>
+                            <option value="small">Small @ 300 Ksh</option>
+                            <option value="medium">Medium @ 500 Ksh</option>
+                            <option value="large">Large @ 900 Ksh</option>
                         </select>
                         <span class="error" id="size-error"></span>
                     </div>
@@ -57,9 +57,9 @@
                     </div>
                     <div class="col-sm-3">
                         <select class="form-control" name="crust" required>
-                            <option value="cripsy" id="cripsy"> Cripsy </option>
-                            <option value="stuffed" id="stuffe">Stuffed </option>
-                            <option value="glutten-free" id="glutten-free">Glutten-free</option>
+                            <option value="cripsy" id="cripsy"> Cripsy @ 100 Ksh</option>
+                            <option value="stuffed" id="stuffe">Stuffed @ 200 Ksh </option>
+                            <option value="glutten-free" id="glutten-free">Glutten-free @ 300 Ksh</option>
                         </select>
                         <span class="error" id="crust-error"></span>
                     </div>
