have made by delivery and add button clickable

--- a/ourmenu.html
+++ b/ourmenu.html
@@ -117,9 +117,9 @@
                             placeholder="Enter your phone number: "><br><br>
                         <input type="text" class="form-control cdata" id="location"
                             placeholder="Enter the location: "><br><br>
-                        <button class="btn bg-info text-center d-block mx-auto go" id="go" type="submit">Make
+                        <button class="btn bg-info text-center d-block mx-auto go" id="go" type="button">Make
                             Delivery</button>
-                        <button class="bnt bg-info text-center d-block mx-auto go" id="do" type="submit">Pick
+                        <button class="bnt bg-info text-center d-block mx-auto go" id="do" type="button">Pick
                             Up</button>
                     </form>
 
