--- a/ourmenu.html
+++ b/ourmenu.html
@@ -110,14 +110,15 @@
                        
                     <div class="col-sm-3"></div>
                     
-                    <form action="" class="form-group col-sm-6 data" id="data">
+                    <form action="" class="form-group col-sm-6 data" id=" ">
                         <h1 class="text-center text-danger">Delivery address</h1>
-                        <input type="text" class="form-control cdata" id="name" placeholder="Enter your Name:"><br><br>
+                        <input type="text" class="form-control cdata" id="name" 
+                        placeholder="Enter your Name:" required ><br><br>
                         <input type="text" class="form-control cdata" id="phone"
-                            placeholder="Enter your phone number: "><br><br>
+                            placeholder="Enter your phone number:"required><br><br>
                         <input type="text" class="form-control cdata" id="location"
-                            placeholder="Enter the location: "><br><br>
-                        <button class="btn bg-info text-center d-block mx-auto go" id="go" type="button">Make
+                            placeholder="Enter the location: " required><br><br>
+                        <button class="btn bg-info text-center d-block mx-auto go" id="go" type="submit">Make
                             Delivery</button>
                         <button class="bnt bg-info text-center d-block mx-auto go" id="do" type="button">Pick
                             Up</button>
