have made my project responsive

--- a/ourmenu.html
+++ b/ourmenu.html
@@ -15,7 +15,7 @@
 <body>
 
 
-    <div class="container1">
+    <div class="container">
         <div class="our" id="ourmenu">
             <div class="navbar" id="nav1">
                 <a href="index.html">Home</a>
@@ -31,7 +31,7 @@
         </div><br><br><br><br>
 
 
-        <div class="container2">
+        <div class="container">
             <h2>MENU</h2>
 
             <form class="menu" action="" method="post" id="menu1"><br><br>
@@ -71,7 +71,7 @@
                         <label>TOPPINGS</label>
                     </div>
                     <div class="col-sm-3">
-                        <select class="form-control" id="select-toppings" name="toppings" required>                       
+                        <select class="form-control" id="select-toppings" name="toppings" required>
                         </select>
                         <span class="error" id="toppings-error"></span>
                     </div>
@@ -98,6 +98,7 @@
 
             </form>
         </div>
+        <div class="container">
 
         <div class="order" id="orders">
             <h1 class="text-center" id="pizzadd">Order Summary</h1>
@@ -107,17 +108,17 @@
 
             <div class="cdata-overlay" id="pic">
                 <div class="customerdata row">
-                       
+
                     <div class="col-sm-3"></div>
-                    
+
                     <form action="" class="form-group col-sm-6 data" id=" ">
                         <h1 class="text-center text-danger">Delivery address</h1>
-                        <input type="text" class="form-control cdata" id="name" 
-                        placeholder="Enter your Name:" required ><br><br>
-                        <input type="text" class="form-control cdata" id="phone"
-                            placeholder="Enter your phone number:"required><br><br>
-                        <input type="text" class="form-control cdata" id="location"
-                            placeholder="Enter the location: " required><br><br>
+                        <input type="text" class="form-control cdata" id="name" placeholder="Enter your Name:"
+                            required><br><br>
+                        <input type="text" class="form-control cdata" id="phone" placeholder="Enter your phone number:"
+                            required><br><br>
+                        <input type="text" class="form-control cdata" id="location" placeholder="Enter the location: "
+                            required><br><br>
                         <button class="btn bg-info text-center d-block mx-auto go" id="go" type="submit">Make
                             Delivery</button>
                         <button class="bnt bg-info text-center d-block mx-auto go" id="do" type="button">Pick
@@ -140,10 +141,10 @@
                 <br>YAMMY PIZZA INN<br>2019<br>
             </footer>
         </div>
-
-
-        <script src="js/jquery-3.4.1.js"></script>
-        <script src="js/script.js"></script>
+        </div>
+    </div>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
