--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body class="container">
         <div class="page" id="front">
             <div class="navbar" id="nav">
-                <a href="index.html #home">Home</a>
+                <a href="index.html">Home</a>
                 <a href="ourmenu.html" id="m" >Our Menu</a>
                 <a href="contact.html">Contact</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
